@@ -3,3 +3,6 @@ CXX_STD = CXX11
 
 ## We need the headers exported via inst/include
 PKG_CPPFLAGS = -I../inst/include/
+
+## Needed for the 'non-streams' variant charToPOSIXctNS
+#PKG_LIBS = -lboost_date_time
